# tardigrade-ci

./: .gitignore  ARCHI.md  BACKLOG.md  Cargo.toml  Dockerfile.server  Dockerfile.worker  Makefile  README.md  UX.md  docker-compose.yml
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
config/: example.toml  runtime-dev.toml  runtime-prod.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/application/: ci_use_cases.rs  mod.rs
crates/api/src/graphql/: ci_graphql_schema.rs  gql_build_record.rs  gql_create_job_input.rs  gql_dashboard_snapshot.rs  gql_err_from_api.rs  gql_health_response.rs  gql_job_definition.rs  gql_job_status.rs  gql_live_response.rs  gql_plugin_authorization_check_response.rs  gql_plugin_info.rs  gql_plugin_policy_response.rs  gql_ready_response.rs  gql_runtime_metrics.rs  gql_scm_polling_config.rs  gql_scm_polling_tick_response.rs  gql_scm_provider.rs  gql_scm_webhook_rejection_entry.rs  gql_upsert_scm_polling_config_input.rs  gql_upsert_webhook_security_config_input.rs  gql_webhook_header_input.rs  gql_webhook_security_config.rs  gql_worker_build_status.rs  gql_worker_info.rs  mod.rs  mutation_root.rs  parse_id_as_uuid.rs  query_root.rs
crates/api/src/handlers/: builds.rs  graphql.rs  jobs.rs  mod.rs  plugins.rs  probes.rs  scm.rs  telemetry.rs  workers.rs
crates/api/src/http_models/: api_error_response.rs  cancel_build_response.rs  claim_build_response.rs  complete_build_response.rs  create_job_response.rs  dead_letter_builds_response.rs  health_response.rs  list_builds_response.rs  list_jobs_response.rs  list_plugins_response.rs  list_scm_webhook_rejections_response.rs  list_workers_response.rs  live_response.rs  load_plugin_request.rs  mod.rs  plugin_action_response.rs  plugin_authorization_check_request.rs  plugin_info.rs  plugin_policy_response.rs  ready_response.rs  run_job_response.rs  runtime_metrics_response.rs  scm_webhook_rejection_entry.rs  upsert_plugin_policy_request.rs  upsert_webhook_security_config_request.rs  worker_build_status.rs
crates/api/src/models/: api_auth_context.rs  complete_build_request.rs  create_job_request.rs  mod.rs  scm_polling_tick_response.rs  scm_webhook_accepted_response.rs  upsert_scm_polling_config_request.rs  worker_build_status.rs  worker_info.rs
crates/api/src/routing/: mod.rs
crates/api/src/service/: api_error.rs  ci_service.rs  map_pipeline_error.rs  mod.rs  runtime_metrics.rs  scm_trigger_event.rs  scm_webhook.rs  scm_webhook_request.rs
crates/api/src/settings/: mod.rs  service_settings.rs
crates/api/src/state/: api_state.rs  mod.rs
crates/api/tests/: e2e_graphql_fixture.rs  graphql.rs  health.rs  jobs.rs  persistence_postgres.rs  plugins.rs  scm.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/application/: ci_use_cases.rs  mod.rs
crates/application/src/events/: live_event.rs  mod.rs
crates/application/src/models/: mod.rs  plugin_authorization_check_response.rs  scm_webhook_ingest_failure.rs
crates/application/src/plugins/: mod.rs  plugin_use_cases.rs
crates/application/src/service/: api_error.rs  ci_service.rs  map_pipeline_error.rs  mod.rs  runtime_metrics.rs  scm_trigger_event.rs  scm_webhook.rs  scm_webhook_request.rs
crates/application/src/settings/: service_settings.rs
crates/auth/: Cargo.toml
crates/core/: Cargo.toml  diagram.md
crates/executor/: Cargo.toml
crates/plugins/: Cargo.toml
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  tests.rs
crates/scheduler/src/backend/: file_backed_scheduler.rs  in_memory_scheduler.rs  mod.rs  postgres_scheduler.rs  redis_scheduler.rs  tests.rs
crates/scheduler/src/contract/: scheduler.rs
crates/scheduler/src/model/: in_flight_entry.rs  mod.rs  queue_state.rs
crates/server/: Cargo.toml
crates/server/dashboard/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
crates/server/dashboard/src/: App.tsx  styles.css
crates/server/dashboard/tests/: admin-ui.e2e.spec.ts
crates/server/src/: auth_middleware.rs  lib.rs  main.rs  tests.rs  webhook_adapter.rs  webhook_adapter_tests.rs
crates/server/src/config/: mod.rs  runtime_mode.rs  runtime_mode_loader.rs  runtime_section.rs  server_config_file.rs  tests.rs
crates/server/src/dashboard/: assets.rs  handlers.rs  mod.rs  service.rs  tests.rs
crates/server/src/runtime/: file_backed_prod_deprecation_target.rs  mod.rs  shutdown_signal.rs
crates/server/static/: app.js  index.html  styles.css
crates/server/tests/: api_key_auth_middleware.rs  webhook_adapter.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  tests.rs
crates/storage/src/backend/: in_memory_storage.rs  mod.rs  postgres_storage.rs  tests.rs
crates/storage/src/codec/: job_status_codec.rs  mod.rs  scm_provider_codec.rs  tests.rs
crates/storage/src/contract/: mod.rs  storage.rs
crates/storage/src/mapping/: mod.rs  row_to_build.rs  row_to_job.rs  row_to_scm_polling_config.rs  row_to_webhook_security_config.rs
crates/worker/: Cargo.toml
crates/worker/src/: completion_payload.rs  endpoint_urls.rs  main.rs  tests.rs  worker_api.rs  worker_config.rs  worker_steps.rs
crates/worker/src/completion_payload/: tests.rs
crates/worker/src/endpoint_urls/: tests.rs
crates/worker/src/worker_config/: tests.rs
crates/worker/src/worker_steps/: tests.rs
crates/xtask/: Cargo.toml
dashboard/: .oxlintrc.json  UX.md  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  styles.css
docs/: admin-ui-runbook.md  api-contract.md  pipeline-content-tracking.md  pipeline-recipes.md  pipeline-schema.md  plugin-authoring-permissions.md  scheduler-migration.md  technology-profile-onboarding.md  worker-transport-benchmark.md
mk/: ci.mk  common.mk  dashboard.mk  docker.mk  rust.mk
scripts/: check-hexagonal-deps.sh  check-hexagonal-imports.sh  coverage.sh  dev-down.sh  dev-smoke.sh  dev-up.sh  package-platform-zips.sh  test-hexagonal-deps-guard.sh  test-hexagonal-imports-guard.sh
(+92 files in other folders)
