[package]
name = "tardigrade-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tardigrade-core = { path = "../core" }
tardigrade-storage = { path = "../storage" }
tardigrade-scheduler = { path = "../scheduler" }
tardigrade-executor = { path = "../executor" }

[dev-dependencies]
tower = "0.5"
