[package]
name = "tardigrade-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tardigrade-core = { path = "../core" }
tardigrade-storage = { path = "../storage" }
tardigrade-scheduler = { path = "../scheduler" }
tardigrade-executor = { path = "../executor" }

[dev-dependencies]
tower = "0.5"
