[package]
name = "tardigrade-application"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
hmac = "0.12"
sha2 = "0.11"
hex = "0.4"
tardigrade-core = { path = "../core" }
tardigrade-storage = { path = "../storage" }
tardigrade-scheduler = { path = "../scheduler" }
tardigrade-plugins = { path = "../plugins" }
