[package]
name = "tardigrade-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tardigrade-core = { path = "../core" }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
chrono.workspace = true
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
