[package]
name = "tardigrade-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tardigrade-api = { path = "../api" }
tardigrade-scheduler = { path = "../scheduler" }
tardigrade-storage = { path = "../storage" }
