[package]
name = "tardigrade-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml = "1.1"
tower-http = { version = "0.6", features = ["fs"] }
tardigrade-api = { path = "../api" }
tardigrade-scheduler = { path = "../scheduler" }
tardigrade-storage = { path = "../storage" }

[dev-dependencies]
tower = "0.5"
serde_json.workspace = true
tardigrade-application = { path = "../application" }
