[package]
name = "tardigrade-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tardigrade-core = { path = "../core" }
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
async-trait.workspace = true
