[package]
name = "tardigrade-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
uuid.workspace = true
async-trait.workspace = true
tardigrade-core = { path = "../core" }
tardigrade-api = { path = "../api" }
tardigrade-storage = { path = "../storage" }
tardigrade-scheduler = { path = "../scheduler" }
