[package]
name = "tardigrade-worker"
version = "0.1.0"
edition = "2024"

[features]
default = []
transport-bench = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
uuid.workspace = true
async-trait.workspace = true
toml = "0.8"
tardigrade-core = { path = "../core" }

[[bin]]
name = "transport_bench"
path = "src/bin/transport_bench.rs"
required-features = ["transport-bench"]
